<resources>
    <string name="app_name">Picate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="if_you_are_not_registered_register_first">If you are not registered, register first.</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="account">Account</string>
    <string name="update">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Account blank fragment</string>
    <string name="update_blank_fragment">update_blank_fragment</string>
    <string name="reset_my_password">RESET MY PASSWORD</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="confirm">CONFIRM</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="please_confirm_your_password_before_making_any_changes">Please confirm your password before making any
        changes.
    </string>

    <string name="title_activity_internet_connection_lost">InternetConnectionLostActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="this_is_a_student_project_open_to_development_if_you_want_to_support">This is a student project. Open
        to development. If you want to support:
    </string>
    <string name="github">Github:</string>
    <string name="stellar">Stellar(XLM):</string>
    <string name="gbi6s6n3m3ffm2loevua3fxkpqph2txbehmzesrfheigvierbp4xsolo">
        GBI6S6N3M3FFM2LOEVUA3FXKPQPH2TXBEHMZESRFHEIGVIERBP4XSOLO
    </string>
    <string name="https_github_com_yplog_picate">https://github.com/yplog/picate</string>
</resources>
