<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".fragments.UpdateFragment" android:visibility="visible">


    <TextView
            android:text="@string/please_confirm_your_password_before_making_any_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewConfirmPassword"
            android:textSize="14sp" android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/imageViewGreenPoint" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="14dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="14dp"/>

    <ImageView
            android:src="@android:drawable/presence_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewGreenPoint"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword"
            android:hint="@string/password"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/textViewConfirmPassword"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonConfirm"
            app:layout_constraintTop_toTopOf="@+id/editTextPassword"
            app:layout_constraintBottom_toBottomOf="@+id/editTextPassword" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/editTextPassword"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.771"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/reset_my_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonResetPassword"
            app:layout_constraintBottom_toBottomOf="@+id/textViewForgotPassword" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/textViewForgotPassword" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textViewForgotPassword"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.655"
            app:layout_constraintVertical_bias="0.486"/>

    <TextView
            android:text="@string/forgot_your_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewForgotPassword"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="14sp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="395dp"
            android:layout_height="510dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:id="@+id/constraintLayoutUpdate" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonResetPassword" android:visibility="invisible">

        <Button
                android:text="@string/delete_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDeleteUser" android:background="@color/colorPrimaryDark"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/common_google_signin_btn_text_dark"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>